feat: enhance Provider entity with comprehensive validation and proper JSON handling
- Apply consistent string validation pattern to all Provider setters:
  - trim(), normalize blank/empty to null, validate length/pattern, set once
  - licenseNumbers, specialty, qualifications, bio, officePhone
- Remove @Pattern annotation from officePhone column mapping (validation in setter)
- Change customData field from String to JsonNode to match JSONB database column
- Add proper JSON handling in business logic:
  - setCustomData(JsonNode) for direct JsonNode assignment
  - setCustomData(String) for JSON string parsing with validation
  - Throws ValidationException for invalid JSON format
- Add comprehensive validation tests for all Provider entity setters:
  - testLicenseNumbersField() - length validation
  - testNpiNumberField() - null, empty, length, format validation
  - testSpecialtyField() - length validation and normalization
  - testQualificationsField() - normalization
  - testBioField() - normalization
  - testOfficePhoneField() - length, format validation and normalization
  - testCustomDataField() - JSON string parsing and validation
- All 9 ProviderEntityTest tests passing with comprehensive coverage
- Clean test code without exception handling in test methods

Coverage improvements:
- All setter validation paths and null handling scenarios
- JSON parsing validation with proper error handling
- Comprehensive field-specific validation tests