@@ -3,6 +3,8 @@ package com.healthcare.entity;
 import com.healthcare.constants.DatabaseConstants;
 import com.healthcare.constants.ValidationPatterns;
 import com.healthcare.exception.ValidationException;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.persistence.*;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
@@ -48,12 +50,11 @@ public class Provider extends BaseEntity {
     private String bio;
 
     @Size(max = 20)
-    @Pattern(regexp = ValidationPatterns.PHONE, message = "Office phone must be a valid international format")
     @Column(name = DatabaseConstants.COL_OFFICE_PHONE)
     private String officePhone;
 
     @Column(name = DatabaseConstants.COL_CUSTOM_DATA, columnDefinition = "JSONB")
-    private String customData;
+    private JsonNode customData;
 
     // Constructors
     public Provider() {}
@@ -75,6 +76,14 @@ public class Provider extends BaseEntity {
     }
 
     public void setLicenseNumbers(String licenseNumbers) {
+        if (licenseNumbers != null) {
+            licenseNumbers = licenseNumbers.trim();
+            if (licenseNumbers.isBlank()) {
+                licenseNumbers = null;  // Normalize to NULL
+            } else if (licenseNumbers.length() > 50) {
+                throw new ValidationException("License numbers cannot exceed 50 characters");
+            }
+        }
         this.licenseNumbers = licenseNumbers;
     }
 
@@ -86,6 +95,7 @@ public class Provider extends BaseEntity {
         if (npiNumber == null || npiNumber.trim().isEmpty()) {
             throw new ValidationException("NPI number cannot be null or empty");
         }
+        npiNumber = npiNumber.trim();
         if (npiNumber.length() > 10) {
             throw new ValidationException("NPI number cannot exceed 10 characters");
         }
@@ -100,6 +110,14 @@ public class Provider extends BaseEntity {
     }
 
     public void setSpecialty(String specialty) {
+        if (specialty != null) {
+            specialty = specialty.trim();
+            if (specialty.isBlank()) {
+                specialty = null;  // Normalize to NULL
+            } else if (specialty.length() > 100) {
+                throw new ValidationException("Specialty cannot exceed 100 characters");
+            }
+        }
         this.specialty = specialty;
     }
 
@@ -108,6 +126,12 @@ public class Provider extends BaseEntity {
     }
 
     public void setQualifications(String qualifications) {
+        if (qualifications != null) {
+            qualifications = qualifications.trim();
+            if (qualifications.isBlank()) {
+                qualifications = null;  // Normalize to NULL
+            }
+        }
         this.qualifications = qualifications;
     }
 
@@ -116,6 +140,12 @@ public class Provider extends BaseEntity {
     }
 
     public void setBio(String bio) {
+        if (bio != null) {
+            bio = bio.trim();
+            if (bio.isBlank()) {
+                bio = null;  // Normalize to NULL
+            }
+        }
         this.bio = bio;
     }
 
@@ -124,23 +154,39 @@ public class Provider extends BaseEntity {
     }
 
     public void setOfficePhone(String officePhone) {
-        if (officePhone != null && !officePhone.trim().isEmpty()) {
-            if (officePhone.length() > 20) {
+        if (officePhone != null) {
+            officePhone = officePhone.trim();
+            if (officePhone.isBlank()) {
+                officePhone = null;  // Normalize to NULL
+            } else if (officePhone.length() > 20) {
                 throw new ValidationException("Office phone cannot exceed 20 characters");
-            }
-            if (!officePhone.matches(ValidationPatterns.PHONE)) {
+            } else if (!officePhone.matches(ValidationPatterns.PHONE)) {
                 throw new ValidationException("Office phone must be a valid international format");
             }
         }
         this.officePhone = officePhone;
     }
 
-    public String getCustomData() {
+    public JsonNode getCustomData() {
         return customData;
     }
 
-    public void setCustomData(String customData) {
+    public void setCustomData(JsonNode customData) {
         this.customData = customData;
+    }
+
+    public void setCustomData(String customDataJson) {
+        if (customDataJson == null) {
+            this.customData = null;
+            return;
+        }
+
+        try {
+            ObjectMapper mapper = new ObjectMapper();
+            this.customData = mapper.readTree(customDataJson);
+        } catch (Exception e) {
+            throw new ValidationException("Invalid JSON format for custom data: " + e.getMessage());
+        }
     }
 
     // ==================== VALIDATION METHODS ====================
